--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -25,15 +25,17 @@ pre {
 
 div.logo {
      float: left;
-     padding: 10px 10px 10px 14px;
+     padding: 10px;
      text-align: center;
      font-color: #fff;
-     margin: 0 20px 0 14px;
+     margin: 0 20px 0 20px;
      border: 1px solid #002;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      border-radius: 4px;
      background: #ddddff url('images/lightbluetile.png');
+     width: 175px;
+     -moz-box-shadow: inset 0px 0px 16px 1px #eef;
 }
 
 div.toolbar {
@@ -100,8 +102,8 @@ div.routersummary {
 }
 
 div.warning {
-     margin: 0 20px 10px 224px;
-     padding: 20px 25px 20px 75px;
+     margin: 5px 20px 10px 240px;
+     padding: 0px 25px 20px 75px;
      background: #fff;
      border: 1px solid #d00;
      text-align: left;
@@ -485,7 +487,7 @@ textarea {
 form {}
 
 .proxyfooter {
-     margin: 0 20px 10px 224px;
+     margin: 0 20px 10px 240px;
      padding: 20px 25px 20px 75px;
      font-color: #f00;
      font-size: 7pt;
@@ -494,4 +496,5 @@ form {}
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      border: 1px solid #001;
+     display: none;
 }    
