--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -98,7 +98,7 @@ div.routersummary {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      float: left;
-     -moz-box-shadow: inset 0px 0px 16px 1px #eef;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
 }
 
 div.warning {
@@ -145,21 +145,57 @@ div.news {
      margin: 0px 15px 20px 245px;
      padding: 20px 30px 20px 30px;
      border: 1px solid #003;
-     background: #fea;
-     color: #001;
+     color: #410;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      text-align: justify !important;
      line-height: 140%;
+     background: #fea url('images/sandtile.png');
+     -moz-box-shadow: inset 0px 0px 1px 0px #410;
+}
+
+div.news a:link{
+     color: #630;
+     text-decoration: none;
+}
+
+div.news a:visited{
+     color: #830;
+}
+
+div.news a:hover{
+     color: #a30;
+     text-decoration: underline;
+}
+
+div.news a:active{
+     color: #c30;
+}
+
+div.news hr{
+     color: #410;
+     background: #410;
+     height: 1px;
+     border: 0px solid #410;
+     margin: 10px 0;
 }
 
 div.news li {
      text-align: justify;
-     list-style: url(images/info.png);
-     margin: 0 10px 0 25px !important;
+     list-style: none;
+     margin: 0 0 20px 0 !important;
      padding: 5px 0;
      vertical-align: bottom;
+     border: 1px solid #410;
+     border-left: 5px solid #410;
+     padding: 3px 5px 3px 5px;
+     border-radius: 0 4px 4px 0;
+     -moz-border-radius: 0 4px 4px 0;
+     -khtml-border-radius: 0 4px 4px 0;
+     background: #fb1;
+     font-size: 10pt;
+     opacity: 0.8;
 }
 
 div.confignav {
@@ -173,6 +209,7 @@ div.confignav {
      font-size: 10pt !important;
      font-weight: bold !important;
      line-height: 160% !important;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
 }
 
 div.configure {
@@ -183,6 +220,7 @@ div.configure {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      border: 1px solid #000022;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
 }
 
 div.messages {
@@ -195,6 +233,7 @@ div.messages {
      border: 1px solid #000033;
      background: #008 url('images/lightbluetile.png');
      font-weight: bold;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
 }
 
 div.messages span.error {
@@ -243,13 +282,13 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
      background: #bbf url('images/tabletile_alt.png') !important;
 }
-
+/*
 tr:last-child {
      background: #bbf url('images/tabletilelighter.png') !important;
      font-weight: bold;
      border: 1px solid #002 !important;
 }
-
+*/
 td {
      padding: 5px;
      color: #000;
@@ -296,14 +335,20 @@ code {
 
 a:link{
      color: #007;
+     text-decoration: none;
+     font-weight: bold;
 }
 
 a:visited{
      color: #606;
+     text-decoration: none;
+     font-weight: bold;
 }
 
 a:hover{
      color: #f60;
+     text-decoration: underline;
+     font-weight: bold;
 }
 
 .links {
@@ -326,7 +371,7 @@ h1 {
      letter-spacing: 0.15em;
      text-transform: uppercase;
      text-shadow: 0px 0px 1px rgba(0, 0, 148, 0.9);
-     -moz-box-shadow: inset 0px 0px 16px 1px #eef;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
      white-space: normal;
      background: #ddddff url('images/lightbluetile.png');
      border: 1px solid #002;
@@ -348,6 +393,7 @@ h2 {
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      margin: 25px 0 20px 0 !important;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
 }
 
 h2 a:hover {
