More CSS tweaks and an intial stab at taming susidns' unruly layout!
Monotone-Parent: ca7c2c0a050c4fe7bedb305b9dba557d0e2a6e69
Monotone-Revision: eed8cd82284703473ad336f20ed84fd2d22e549d

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-20T11:18:31
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -104,7 +104,7 @@ div.warning {
      margin: 5px 20px 10px 240px;
      padding: 0px 25px 20px 75px;
      background: #005;
-     border: 1px solid #d00;
+     border: 1px solid #99f;
      text-align: left;
      color: #fff;
      -moz-border-radius: 4px;
@@ -114,6 +114,7 @@ div.warning {
      background-image:url("images/errortriangle.png");
      background-position:15px center;
      background-repeat:no-repeat;
+     -moz-box-shadow: inset 0px 0px 0px 1px #f00;
 }
 
 div.main {
