--- a/apps/susimail/src/css.css
+++ b/apps/susimail/src/css.css
@@ -1,9 +1,11 @@
 body {
-	background-color:white;
+	background-color: #eef;
+	color:#001;
+	font-family:"Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
 }
 
 li {
-	font-family:Verdana,Tahoma,Arial,Helvetica;
+
 	color:black;
 	line-height:12pt;
 	font-size:10pt;
@@ -12,7 +14,7 @@ li {
 }
 
 p {
-	font-family:Verdana,Tahoma,Arial,Helvetica;
+
 	color:black;
 	line-height:12pt;
 	margin-left:5mm;
@@ -67,7 +69,7 @@ a:hover {
 }
 
 td {
-	font-family:Verdana,Tahoma,Arial,Helvetica;
+
 	color:black;
 	line-height:12pt;
 	margin-left:5mm;
@@ -93,4 +95,29 @@ pre {
 	font-family:Courier-Fixed;
 	margin-left:1cm;
 	margin-right:1cm;
+}
+
+.page {
+	background-color: #fff;
+	color:#001;
+  margin: 20px;
+  padding: 0 20px;
+  -moz-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #001;
+  font-size: 10pt !important;
+  line-height: 160% !important;
+  -moz-box-shadow: inset 0px 0px 1px 0px #002;
+  text-align: center;
+}
+
+table {
+  text-align: center;
+  width: 100%;
+}
+
+th {
+  font-size: 10pt;
+  font-weight: bold;
 }
