I2PSnark layout, themes, tunnel tables..
Monotone-Parent: b29f9acb944783f1ff9b32391c261b1f1769b48f
Monotone-Revision: ae8e9aef485d70c743b60d9a965539a900e13779

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-22T21:07:46
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -49,13 +49,14 @@ div.routersummaryouter {
 
 div.routersummary {
      background: #fafaff;
-     width: 200px;
+     width: 175px;
      color: inherit;
      margin: 0em;
      padding: 5px;
      text-align: left;
      border: medium solid #efefff;
      font-size: 0.82em;
+     word-wrap: break-word;
 }
 
 div.warning {
