--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -5,19 +5,8 @@ body {
   font-size: 9pt;
 }
 
-/*
 .snarkTitle {
-	text-align: left;
-	float: left;
-	margin: 0px 0px 5px 5px;
-	display: inline;
-	font-size: 16pt;
-	font-weight: bold;
-}
-*/
-
-.snarkTitle {
-	font-size: 16pt;
+	font-size: 12pt;
 	font-weight: bold;
 	text-align: center;
 }
@@ -27,23 +16,27 @@ body {
 }
 
 .snarkMessages {
-	border: none;
-  background-color: #9f9;
-  font-family: monospace;
-  font-size: 10pt;
+  background-color: #fe9;
+  font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono !important;
+  font-size: 9pt;
   font-weight: bold;
-/*  width: 100%; */
   text-align: left;
   margin: 0 0 15px 0;
   border: 0px;
   padding: 5px;
-  border-width: 0px;
   border-spacing: 0px;
   -moz-border-radius: 4px;
   -khtml-border-radius: 4px;
   border-radius: 4px;
   border: 2px inset #770;
-  overflow-x: scroll;
+  text-align: center; 
+}
+
+pre {
+  font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono !important;
+  width: 100%;
+  font-size: 8pt;
+  padding: 0;
 }
 
 table {
@@ -54,19 +47,25 @@ table {
 	border-spacing: 0px;
 }
 th {
-	background-color: #C7D5D5;
+	background-color: #f91;
 	padding: 5px;
   font-size: 9pt;
 }
+
+.SnarkTorrents {
+	margin: 0;
+	border: 1px solid #001;
+}
+
 td {
 	padding: 5px;
 }
 .snarkTorrentEven {
-	background-color: #bbf;
+	background-color: #fb1;
   font-size: 8pt;
 }
 .snarkTorrentOdd {
-	background-color: #ddf;
+	background-color: #fa1;
   font-size: 8pt;
 }
 .snarkNewTorrent {
@@ -83,14 +82,14 @@ td {
 }
 
 .snarkConfig {
- font-size: 10pt;
+  font-size: 10pt;
 }
 
 .page {
 	background-color: #fff;
 	color:#001;
   margin: 20px;
-  padding: 20px 20px 0 20px;
+  padding: 0 20px 5px 20px;
   -moz-border-radius: 4px;
   -khtml-border-radius: 4px;
   border-radius: 4px;
@@ -102,7 +101,7 @@ td {
 }
 
 form {
-  line-height: 300%
+  line-height: 250%
 }
 
 p { 
@@ -111,4 +110,27 @@ p {
 
 a:link {
   padding 5px;
+}
+
+hr {
+  color: #003;
+  background: #003;
+  height: 1px;
+  border: 0px solid #003;
+  margin: 5px 0;
+}
+
+div.section {
+  margin: 20px 0 0 0;
+  padding: 10px;
+  background: #ffe;
+  border: 1px solid #001;
+  text-align: left;
+  color: #001;
+  -moz-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+  -moz-box-shadow: inset 0px 0px 1px 0px #002;
+  word-wrap: break-word;
+  text-align: center;
 }
