Ensure links don't revert to underlined and unbold after visitation in dark theme.
Monotone-Parent: ae8e9aef485d70c743b60d9a965539a900e13779
Monotone-Revision: 41df3ad068c37873596b547247223f9d4645cd37

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-22T21:37:56
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -300,10 +300,16 @@ a:link, h2 a:link{
 
 a:visited{
      color: #7bb;
+     text-decoration: none;
+     font-weight: bold;     
+     word-wrap: break-word;
 }
 
 a:hover{
      color: #f60;
+     text-decoration: underline;
+     font-weight: bold;     
+     word-wrap: break-word;
 }
 
 .links {
