Swap over margin to bottom of section div lose (some of the) header whitespace.
Monotone-Parent: 5b87f614a8be6edd430671bfe49220b9df63c759
Monotone-Revision: 0f1769e296dcc9b95f0997d390bde8c499a30952

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-22T22:31:21
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -121,7 +121,7 @@ hr {
 }
 
 div.section {
-  margin: 20px 0 0 0;
+  margin: 0 0 20px 0;
   padding: 10px;
   background: #ffe;
   border: 1px solid #001;
