I2PSnark UI changes: add a splash of color! Fix for light i2ptunnels theme.
Monotone-Parent: c9f8ea8e296facae0ac9e8c54f3d42d989b01476
Monotone-Revision: 96cf7372e78bd9a5bdd736da295c7ce43664c277

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-23T17:01:43
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/default.css
+++ b/installer/resources/themes/console/light/default.css
@@ -26,7 +26,7 @@ label {
      padding: 1px 10px 2px 0px;
      float: left;
      width: 120px;
-     height: 28px;
+     height: 24px;
      font-weight: normal;
      text-align: right;
      font-size: 8pt;
@@ -34,6 +34,7 @@ label {
      -moz-box-sizing: border-box;
      box-sizing: border-box;
      line-height: 120%;
+     color: #427;
 }
 
 h4 {
@@ -84,7 +85,7 @@ br {
 
 div.statusNotRunning {
      float: left;
-     width: 72px;
+     width: 68px;
      height: 24px;
      overflow: hidden;
      color: #d00;
@@ -95,7 +96,7 @@ div.statusNotRunning {
 
 div.statusRunning {
    float: left;
-     width: 72px;
+     width: 68px;
      height: 24px;
      overflow: hidden;
      color: #0b0;
@@ -106,7 +107,7 @@ div.statusRunning {
 
 div.statusStarting {
      float: left;
-     width: 72px;
+     width: 68px;
      height: 24px;
      overflow: hidden;
      color: #339933;
