I2PSnark: Opacity fade on header logo etc.
Monotone-Parent: 96cf7372e78bd9a5bdd736da295c7ce43664c277
Monotone-Revision: fff9983cef602d850750673dc17a0d1cd0818a7b

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-23T17:22:05
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -199,6 +199,13 @@ select {
 img {
   border: none;
   margin: 5px 5px 10px 5px;
+  opacity: 0.6;
+}
+
+img:hover{
+  border: none;
+  margin: 5px 5px 10px 5px;
+  opacity: 0.7;
 }
 
 
@@ -272,7 +279,7 @@ div.configsection {
   background: #ffe;
   border: 1px solid #001;
   text-align: center;
-  color: #fff;
+  color: #ffb;
   -moz-border-radius: 4px;
   -khtml-border-radius: 4px;
   border-radius: 4px;
@@ -280,4 +287,5 @@ div.configsection {
   word-wrap: break-word;
   text-align: center;
   background: #ffe url('../console/images/redtile.png');
+  font-weight: bold; /* red tile needs bold text! */
 }
