--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -12,29 +12,48 @@ body {
 }
 
 .snarkRefresh {
-     border: 1px outset #001;
-     padding: 1px 10px;
+     border: 1px outset #eef;
+     padding: 2px 10px;
      background: #eef;
      text-decoration: none;
-     border-radius: 4px;
-     -moz-border-radius: 4px;
-     -khtml-border-radius: 4px;
+     border-radius: 3px;
+     -moz-border-radius: 3px;
+     -khtml-border-radius: 3px;
      font-size: 9pt;
      font-weight: bold;
      margin: -10px 3px 0 3px;
      text-align: center;
      vertical-align: middle;
      text-transform: uppercase;
+     opacity: 0.7;
+     letter-spacing: 0.05em;
 }
 
-.snarkRefresh a:hover{
-     border: 1px inset #001;
-     padding: 1px 10px;
+.snarkRefresh:link {
+     border: 1px outset #eef;
+     padding: 2px 10px;
+     background: #eef;
+     text-decoration: none;
+     border-radius: 3px;
+     -moz-border-radius: 3px;
+     -khtml-border-radius: 3px;
+     font-size: 9pt;
+     font-weight: bold;
+     margin: 0px 3px 0px 3px !important;
+     text-align: center;
+     vertical-align: middle;
+     text-transform: uppercase;
+     opacity: 0.7;
+     color: #003;
+}
+.snarkRefresh:hover{
+     border: 1px solid #eef;
+     padding: 2px 10px;
      background: #003;
      text-decoration: none;
-     border-radius: 4px;
-     -moz-border-radius: 4px;
-     -khtml-border-radius: 4px;
+     border-radius: 3px;
+     -moz-border-radius: 3px;
+     -khtml-border-radius: 3px;
      font-size: 9pt;
      font-weight: bold;
      margin: -10px 3px 0 3px;
@@ -42,6 +61,25 @@ body {
      vertical-align: middle;
      text-transform: uppercase;
      color: #f60;
+     opacity: 1;
+}
+
+.snarkRefresh:visited {
+     border: 2px outset #eef;
+     padding: 1px 10px;
+     background: #eef;
+     text-decoration: none;
+     border-radius: 3px;
+     -moz-border-radius: 3px;
+     -khtml-border-radius: 3px;
+     font-size: 9pt;
+     font-weight: bold;
+     margin: 0px 3px 0px 3px !important;
+     text-align: center;
+     vertical-align: middle;
+     text-transform: uppercase;
+     opacity: 0.7;
+     color: #003;
 }
 
 .snarkMessages {
@@ -75,7 +113,7 @@ pre {
 }
 
 table {
-	margin: 0px 0px 20px 0px;
+	margin: 0px 0px 15px 0px;
 	border: 0px;
 	padding: 0px;
 	border-width: 0px;
@@ -198,13 +236,13 @@ select {
 
 img {
   border: none;
-  margin: 5px 5px 10px 5px;
+  margin: 5px 5px 15px 5px;
   opacity: 0.6;
 }
 
 img:hover{
   border: none;
-  margin: 5px 5px 10px 5px;
+  margin: 5px 5px 15px 5px;
   opacity: 0.7;
 }
 
