Remove superfluous and slightly irritating display:inline from orderered lists in light theme.
Monotone-Parent: f71c66a4af27f8a2399ffe41827a7495f62e4538
Monotone-Revision: 4ed31bc38f25725b56118722a375c67c1b2fd72c

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-23T18:56:12
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -319,11 +319,8 @@ div.main li {
 }
 
 ol {
-/* 
-     white-space: pre-wrap;
-*/
-     display: inline;
-     margin: 1px 0 0 0;
+
+     margin: 1px 0 0 5px;
      padding: 1px 0 0 20px;
 }
 
