--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -89,19 +89,17 @@ body {
   font-weight: bold;
   text-align: left;
   margin: 0 0 15px 0;
-  border: 0px;
   padding: 0px;
   border-spacing: 0px;
-  -moz-border-radius: 4px 0 4px 4px;
+  -moz-border-radius: 4px 0 0 0;
   -khtml-border-radius: 4px;
   border-radius: 4px;
-  border: 1px solid #001;
+  border: 2px solid #930;
   text-align: center; 
   overflow-x: scroll;            
   background: #ddf url('../console/images/orangetile.png');
   color: #531;
   height: 64px;
-  border-bottom: 5px solid #001;
 }
 
 pre {
