Tidy up jobs.jsp a little and other to various ui elements.
Monotone-Parent: e325fcc0e9a4da89185bde4941891ffb691e0902
Monotone-Revision: 5d703f1173cc8ba431446f1e5eb1404eb3b86121

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-24T00:08:08
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -268,7 +268,7 @@ table {
 }
 
 th {
-     padding: 8px;
+     padding: 6px 2px;
      color: #000;
      background: #b4c8ff url('images/tabletitlelight.png') repeat-x;
      text-align: center;
@@ -350,6 +350,12 @@ a:visited{
 
 a:hover{
      color: #f60;
+     text-decoration: underline;
+     font-weight: bold;
+}
+
+a:active{
+     color: #f93;
      text-decoration: underline;
      font-weight: bold;
 }
@@ -551,3 +557,37 @@ form {}
      border: 1px solid #001;
      display: none;
 }    
+
+.statusnotes {
+     font-style: italic;
+     font-size: 8pt;
+     font-color: #700 !important;
+     text-align: center;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border: 0;
+}
+
+.joblog {
+     margin: 25px 0 25px 0;
+     padding: 20px 40px 20px 40px !important;
+     border: 1px solid #003;
+     background-color: #004;
+     background: url("/themes/console/images/olivegreentile.png");
+     color: #001;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     text-align: justify;
+     -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     overflow-x: scroll;
+ }
+ 
+ div.joblog:li {
+     word-wrap: break-word !important;
+}
+
+ .joblog:ul {
+     word-wrap: break-word !important;
+}
