--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -222,7 +222,7 @@ table {
 }
 
 th {
-     padding: 8px;
+     padding: 6px 3px;
      color: #eef;
      text-align: center;
      font-size: 8pt;
@@ -250,7 +250,7 @@ tr:last-child {
 }
 */
 td {
-     padding: 5px 10px;
+     padding: 6px 3px 5px 3px;
      color: #eef;
      vertical-align: middle;
 }
@@ -510,3 +510,37 @@ form {}
      border: 1px solid #001;
      display: none;
 }        
+
+.statusnotes {
+     font-style: italic;
+     font-size: 8pt;
+     font-color: #700;
+     text-align: center;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border: 0 !important;
+}
+
+.joblog {
+     margin: 25px 0 25px 0;
+     padding: 20px 40px 20px 40px !important;
+     border: 1px solid #eef;
+     background-color: #004;
+     background: url("images/lightbluetile.png");
+     color: #dfd;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     text-align: justify;
+     -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     overflow-x: scroll;
+ }
+ 
+ div.joblog:li {
+     word-wrap: break-word !important;
+}
+
+ .joblog:ul {
+     word-wrap: break-word !important;
+}
