--- a/installer/resources/themes/console/light/default.css
+++ b/installer/resources/themes/console/light/default.css
@@ -73,6 +73,7 @@ textarea, input, select, button, a {
 
 button {
      float: none;
+     text-decoration: none;
 }
 
 textarea {
@@ -172,18 +173,21 @@ hr {
      border-radius: 4px;
      margin-top: 8px;
      background: url(images/tabletitlelight.png) 0 0 repeat: x !important;
+     text-decoration: none;
 }
 
 .control:active {
      border: 1px inset;
      background-color: #003;
      color: #ff6600;
+     text-decoration: none;
 }
 
 .control:hover {
      border: 1px solid #eeeeff;
      background-color: #f60;
      color: #fff !important;
+     text-decoration: none;
 }
 
 .panel {
@@ -199,6 +203,7 @@ hr {
      border-radius: 4px;
      border: 1px solid #002;
      padding: 10px 20px;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
 }
 
 .panel .footer {
@@ -239,15 +244,75 @@ hr {
 
 #globalOperationsPanel {
      background-color: #ddddff;
-     border: 1px solid #f22;
-     -moz-box-shadow: inset 0px 0px 4px 0px #f00;
+     border: 1px solid #003;
      padding: 5px 20px 11px 10px;
+     background: url("/themes/console/images/yellowtile.png") !important;
+     -moz-box-shadow: inset 0px 0px 1px 0px #fff;
 }
 
 #globalOperationsPanel .control {
      min-width: 120px;
 }
 
+#globalOperationsPanel .control:link {
+     min-width: 120px;
+}
+
+
+globalOperationsPanel .control:link {
+     min-width: 120px;
+     margin: 4px 0 0 4px !important;
+     padding: 2px;
+     overflow: hidden;
+     font-weight: bold;
+     background-color: #bbbbff;
+     color: black;
+     border: 1px outset #ddddc0;
+     text-align: center;
+     white-space: nowrap;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     margin-top: 8px;
+     background: url(images/tabletitlelight.png) 0 0 repeat: x !important;
+}
+
+
+globalOperationsPanel .control:visited {
+     min-width: 120px;
+     margin: 4px 0 0 4px !important;
+     padding: 2px;
+     overflow: hidden;
+     font-weight: bold;
+     background-color: #bbbbff;
+     color: black;
+     border: 1px outset #ddddc0;
+     text-align: center;
+     white-space: nowrap;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     margin-top: 8px;
+     background: url(images/tabletitlelight.png) 0 0 repeat: x !important;
+}
+
+globalOperationsPanel .control:hover {
+     min-width: 120px;
+     margin: 4px 0 0 4px !important;
+     padding: 2px;
+     overflow: hidden;
+     font-weight: bold;
+     background-color: #003;
+     color: #f60;
+     border: 1px outset #fff;
+     text-align: center;
+     white-space: nowrap;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     margin-top: 8px;
+     background: url(images/tabletitlelight.png) 0 0 repeat: x !important;
+}
 .header {
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
@@ -265,4 +330,29 @@ select {
      min-width: 270px;
      font-size: 8pt;
      max-height: 24px;
+}
+
+a:link{
+     color: #007;
+     text-decoration: none;
+     font-weight: bold;
+     word-wrap: break-word;
+}
+
+a:visited{
+     color: #606;
+     text-decoration: none;
+     font-weight: bold;
+}
+
+a:hover{
+     color: #f60;
+     text-decoration: underline;
+     font-weight: bold;
+}
+
+a:active{
+     color: #f93;
+     text-decoration: underline;
+     font-weight: bold;
 }
