I2PSnark: Fix bad button behaviour.
Monotone-Parent: 5d703f1173cc8ba431446f1e5eb1404eb3b86121
Monotone-Revision: 22e128e61010af7553f98f906bd0df3fb2ccc584

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-24T01:07:07
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -46,7 +46,7 @@ body {
      opacity: 0.7;
      color: #003;
 }
-.snarkRefresh:hover{
+.snarkRefresh:hover, .snarkRefresh:hover:visited{
      border: 1px solid #eef;
      padding: 2px 10px;
      background: #003;
@@ -65,21 +65,10 @@ body {
 }
 
 .snarkRefresh:visited {
-     border: 2px outset #eef;
-     padding: 1px 10px;
-     background: #eef;
-     text-decoration: none;
-     border-radius: 3px;
-     -moz-border-radius: 3px;
-     -khtml-border-radius: 3px;
-     font-size: 9pt;
-     font-weight: bold;
-     margin: 0px 3px 0px 3px !important;
-     text-align: center;
-     vertical-align: middle;
-     text-transform: uppercase;
+     border: 1px outset #eef;
      opacity: 0.7;
      color: #003;
+     background: #eef;
 }
 
 .snarkMessages {
@@ -117,7 +106,6 @@ table {
 	padding: 0px;
 	border-width: 0px;
 	border-spacing: 0px;
-  background-color: #f9f;
 }
 
 th {
@@ -132,6 +120,7 @@ th {
 .SnarkTorrents {
 	margin: 0;
 	border: 1px solid #001;
+  background-color: #f9f;
 }
 
 td {
