Console and I2P tunnels tweaks: more stealth, less color clash!
Monotone-Parent: 22e128e61010af7553f98f906bd0df3fb2ccc584
Monotone-Revision: aac7937e34b380e2cade781fda5e2bff4b58439f

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-24T11:17:53
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -525,7 +525,7 @@ form {}
 .joblog {
      margin: 25px 0 25px 0;
      padding: 20px 40px 20px 40px !important;
-     border: 1px solid #eef;
+     border: 1px solid #99f;
      background-color: #004;
      background: url("images/lightbluetile.png");
      color: #dfd;
