--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -231,9 +231,9 @@ hr {
 
 #globalOperationsPanel {
      background-color: #003;
-     border: 1px solid #f22;
-     background: url(images/lightbluetile.png);
-     -moz-box-shadow: inset 0px 0px 4px 0px #f00;
+     border: 1px solid #99f;
+     background: url(images/darkbluebg.png);
+     -moz-box-shadow: inset 0px 0px 0px 1px #f00;
      padding: 5px 20px 11px 10px !important;
 }
 
