--- a/apps/susimail/src/css.css
+++ b/apps/susimail/src/css.css
@@ -6,7 +6,7 @@ body {
 
 li {
 
-	color:black;
+	color:#001;
 	line-height:12pt;
 	font-size:10pt;
 	margin-left:5mm;
@@ -14,8 +14,7 @@ li {
 }
 
 p {
-
-	color:black;
+	color:#001;
 	line-height:12pt;
 	margin-left:5mm;
 	margin-right:5mm;
@@ -49,14 +48,15 @@ span.coloured {
 p.footer {
 	margin-left:10mm;
 	margin-right:10mm;
-    	font-size:8pt;
-    	line-height:10pt;
+  font-size:8pt;
+  line-height:10pt;
 }
 
 p.mailbody {
-	font-family:Courier-Fixed;
+  font: 10pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
 	margin-left:1cm;
 	margin-right:1cm;
+   text-align: left;
 }
 
 a {
@@ -70,7 +70,7 @@ a:hover {
 
 td {
 
-	color:black;
+	color:#001;
 	line-height:12pt;
 	margin-left:5mm;
 	margin-right:5mm;
@@ -92,7 +92,7 @@ table.noborder {
 }
 
 pre {
-	font-family:Courier-Fixed;
+  font: 9pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
 	margin-left:1cm;
 	margin-right:1cm;
 }
@@ -113,11 +113,20 @@ pre {
 }
 
 table {
-  text-align: center;
+  text-align: justify;
   width: 100%;
 }
 
 th {
   font-size: 10pt;
+  font-weight: bold;
+}
+
+form {
+  line-height: 160%
+}
+
+.mailhead {
+  font-size: 9pt;
   font-weight: bold;
 }
