--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -114,7 +114,7 @@ th {
   border-top: 1px outset #001;
   border-bottom: 1px inset #001;  
   background: #f91 url('.../console/images/tabletitleorangealt.png') repeat-x;
-  text-align: center;
+  text-align: left;
 }
 
 .SnarkTorrents {
@@ -125,7 +125,7 @@ th {
 
 td {
 	padding: 5px;
-  text-align: center;
+  text-align: left;
 }
 .snarkTorrentEven {
 	background-color: #fb1;
@@ -315,10 +315,10 @@ div.configsection {
   -moz-border-radius: 4px;
   -khtml-border-radius: 4px;
   border-radius: 4px;
-  -moz-box-shadow: inset 0px 0px 1px 0px #002;
+  -moz-box-shadow: inset 0px 0px 1px 0px #99f;
   word-wrap: break-word;
   text-align: center;
-  background: #ffe url('../console/images/redtile.png');
+  background: #ffe url('../console/light/images/darkbluetile.png');
   font-weight: bold; /* red tile needs bold text! */
   opacity: 0.95;
 }
