--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -1,3 +1,5 @@
+/* Not yet complete. Subject to flux and change. dr|z3d - 07.25.09 */
+
 body {
      margin: 25px 10px 0 5px;
      padding: 0;
@@ -514,12 +516,14 @@ form {}
 .statusnotes {
      font-style: italic;
      font-size: 8pt;
-     font-color: #700;
+     color: #eef;
      text-align: center;
-     border-radius: 4px;
-     -moz-border-radius: 4px;
-     -khtml-border-radius: 4px;
-     border: 0 !important;
+     border: 1px solid #99f !important;
+     border-top: 0px !important;
+     margin: -5px 0 5px 0; 
+     padding: 7px;
+     background: #004;
+     -moz-box-shadow: inset 0px 0px 2px 0px #99f;
 }
 
 .joblog {
