--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -1,3 +1,5 @@
+/* Not yet complete. Subject to flux and change. dr|z3d - 07.25.09 */
+
 body {
 	background-color: #eef;
 	color:#001;
@@ -11,65 +13,42 @@ body {
 	text-align: center;
 }
 
-.snarkRefresh {
-     border: 1px outset #eef;
-     padding: 2px 10px;
-     background: #eef;
-     text-decoration: none;
-     border-radius: 3px;
-     -moz-border-radius: 3px;
-     -khtml-border-radius: 3px;
-     font-size: 9pt;
-     font-weight: bold;
-     margin: -10px 3px 0 3px;
-     text-align: center;
-     vertical-align: middle;
-     text-transform: uppercase;
-     opacity: 0.7;
-     letter-spacing: 0.05em;
-}
-
-.snarkRefresh:link {
-     border: 1px outset #eef;
-     padding: 2px 10px;
-     background: #eef;
-     text-decoration: none;
-     border-radius: 3px;
-     -moz-border-radius: 3px;
-     -khtml-border-radius: 3px;
-     font-size: 9pt;
-     font-weight: bold;
-     margin: 0px 3px 0px 3px !important;
-     text-align: center;
-     vertical-align: middle;
-     text-transform: uppercase;
-     opacity: 0.7;
-     color: #003;
-}
-.snarkRefresh:hover, .snarkRefresh:hover:visited{
-     border: 1px solid #eef;
-     padding: 2px 10px;
-     background: #003;
-     text-decoration: none;
-     border-radius: 3px;
-     -moz-border-radius: 3px;
-     -khtml-border-radius: 3px;
-     font-size: 9pt;
-     font-weight: bold;
-     margin: -10px 3px 0 3px;
-     text-align: center;
-     vertical-align: middle;
-     text-transform: uppercase;
-     color: #f60;
-     opacity: 1;
-}
-
-.snarkRefresh:visited {
-     border: 1px outset #eef;
-     opacity: 0.7;
-     color: #003;
-     background: #eef;
-}
+.snarkRefresh:link, .snarkRefresh:visited {
+  text-decoration: none !important;
+  text-transform: uppercase !important;
+  padding: 0 16px;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  font-size: 11pt;
+  color: #005;
+  text-shadow: 0px 0px 1px rgba(0, 0, 148, 0.9);
+  }
+ 
+ .snarkRefresh:hover{
+  text-decoration: none !important;
+  text-transform: uppercase !important;
+  padding: 0 16px;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  font-size: 11pt;
+  color: #f60;
+  border-bottom: 3px solid #f60;
+  border-top: 3px solid #f60;
+  text-shadow: 0px 0px 1px rgba(255, 128, 0, 0.9);
+  }
+  
+.snarkRefresh:active{
+  text-decoration: none !important;
+  text-transform: uppercase !important;
+  padding: 0 16px;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  font-size: 11pt;
+  color: #f30;
+  border-bottom: 3px solid #f30;
+  border-top: 3px solid #f30;
+  text-shadow: 0px 0px 1px rgba(255, 163, 0, 0.9);
+  }
 
 .snarkMessages {
   background-color: #f83;
@@ -155,6 +134,7 @@ td {
 .page {
 	background-color: #fff;
 	color:#310;
+  min-width: 700px !important;
   margin: 20px;
   padding: 10px 20px 5px 20px;
   -moz-border-radius: 4px;
@@ -226,14 +206,16 @@ select {
 
 img {
   border: none;
-  margin: 0px 5px 10px 5px;
-  opacity: 0.7;
+  margin: 0px 5px 0px 5px;
+  opacity: 1.0;
+  line-height: 100%
 }
 
 img:hover{
   border: none;
-  margin: 0px 5px 10px 5px;
-  opacity: 1;
+  margin: 0px 5px 0px 5px;
+  opacity: 0.5;
+  line-height: 100%
 }
 
 
@@ -310,15 +292,34 @@ div.configsection {
   padding: 10px;
   background: #ffe;
   border: 1px solid #001;
-  text-align: center;
   color: #ffb;
   -moz-border-radius: 4px;
   -khtml-border-radius: 4px;
   border-radius: 4px;
-  -moz-box-shadow: inset 0px 0px 1px 0px #99f;
+  -moz-box-shadow: inset 0px 0px 0px 1px #900;
   word-wrap: break-word;
   text-align: center;
   background: #ffe url('../console/light/images/darkbluetile.png');
   font-weight: bold; /* red tile needs bold text! */
-  opacity: 0.95;
+}
+
+div.configsection a{
+  color: #f90;
+}
+
+div.configsection a:hover{
+  color: #f60;
+  text-decoration: underline;
+}
+
+.snarknavbar {
+  margin: 5px 0 20px 0 !important;
+  padding: 10px;
+  border: 1px solid #001;
+  -moz-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+  background: #eef;
+  -moz-box-shadow: inset 0px 0px 1px 0px #002;
+  background: #ddf url('../console/light/images/tabletile.png');
 }
